--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "react-stomp": "^5.0.0",
+    "react-text-mask": "^5.4.3",
     "sockjs": "^0.3.20",
     "stompjs": "^2.3.3"
   },
